force-app/main/default/objects/InvoicePayment__c/fields/Amount_Report__c.field-meta.xml
<CustomField>
    <fullName>Amount_Report__c</fullName>
    <formula>Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Report</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>