force-app/main/default/objects/InvoicePayment__c/fields/IsQualifyingPayment__c.field-meta.xml
<CustomField>
    <fullName>IsQualifyingPayment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsQualifyingPayment</label>
    <type>Checkbox</type>
</CustomField>