force-app/main/default/objects/InvoicePayment__c/fields/IsQualifyingPayment_formula__c.field-meta.xml
<CustomField>
    <fullName>IsQualifyingPayment_formula__c</fullName>
    <formula>Payment__r.Status__c = &apos;Processed&apos; &amp;&amp; (Payment__r.Type__c = &apos;External&apos; || (Payment__r.Type__c = &apos;Electronic&apos; &amp;&amp; Payment__r.GatewayState__c = &apos;Settled&apos;)) &amp;&amp;  Payment__r.RefundAmount__c = 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsQualifyingPayment (formula)</label>
    <type>Checkbox</type>
</CustomField>