force-app/main/default/objects/InvoicePayment__c/fields/PaidDate__c.field-meta.xml
<CustomField>
    <fullName>PaidDate__c</fullName>
    <formula>IF(Payment__r.GatewayState__c==&quot;Settled&quot;,Payment__r.SettledOn__c,Payment__r.EffectiveDate__c)</formula>
    <label>Paid Date</label>
    <type>DateTime</type>
</CustomField>